yaml/service-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: ingress
spec:
  ports:
  - name: http 
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    name: nginx-ingress-microk8s
  type: NodePort
